CHANGES IN DEVELOPMENT (1.1.10)
--------------------------

  o Added method for detecting significant interactions with the viewpoint using
    z-scores (`callInteractions()` and `getSignInteractions()`).
  o Added a function for combining restriction fragments that overlap a set of 
    query_regions (`combineUMI4C()`).
  o Create function for generating windows including a fixed number of fragments,
    allowing the use of sliding windows (`makeWindowFragments()`).
  o Added waldUMI4C() function for performing standard DESeq2 differential test 
    from raw UMIs. It allows providing `query_regions` for performing the test
    and summarizing the UMIs in the region by overlap (test each restriction
    fragment separately) or sum (sum UMIs from restriction fragments overlapping
    query regions).
    

CHANGES IN VERSION 1.1.9
--------------------------

  o Allow selection of number of reads to load from FastQ file in prep and split
    functions. Default: 1M reads (1e9).
  o Minor fixes BiocCheck.

CHANGES IN VERSION 1.1.8
--------------------------

  o Use `query_regions` to select the restriction fragments to use for differential
    testing in `diffWaldUMI4C`.    

CHANGES IN VERSION 1.1.7
--------------------------

  o Fixed bug with limits of the log2 OR values when plotting differential
    windows.


CHANGES IN VERSION 1.1.6
--------------------------

  o Fixed bug in creation of gene annotation when an exon belongs to more
    than one transcript.
  o Fixed bug when only one sample is provided (no name in assay columns).

CHANGES IN VERSION 1.1.5
--------------------------

  o Fixed bug in selection of reference UMI4C sample when more than 1 sample
    has the same number of total UMIs. Now it will select the first one.
    The selection of sample to use as reference can be overriden by the
    `ref_umi4c` argument.

CHANGES IN VERSION 1.1.4
--------------------------

  o Fixed bug in domainogram plotting where white color was not aligned