@@ -27,6 +27,8 @@ export(makeWindowFragments)
 export(plotDifferential)
 export(plotDomainogram)
 export(plotGenes)
+export(plotInteractions)
+export(plotInteractionsUMI4C)
 export(plotTrend)
 export(plotUMI4C)
 export(prepUMI4C)
