@@ -43,9 +43,6 @@ plotUMI4C <- function(umi4c,
     rel_heights = c(0.25, 0.4, 0.12, 0.23),
     font_size = 14) {
     
-    ## Add grouping if not present
-    if (length(groupsUMI4C(umi4c)))
-    
     ## Define xlim if null
     if (is.null(xlim)) {
         xlim <- c(
